chore(books): new year changes